--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,10 @@ main {
     max-width: 200px;
     margin-top: 0;
 }
+
+.heading-1 {
+    color: hsl(0, 6%, 24%);
+    font-weight: 700;
+    display: block;
+    margin-top: 1rem;
+}
