--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,10 @@ main {
     display: block;
     margin-top: 1rem;
 }
+
+.description {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: 2.5rem;
+    color: hsl(0, 36%, 70%);
+}
