--- a/base-apparel-coming-soon-master/styles.css
+++ b/base-apparel-coming-soon-master/styles.css
@@ -52,4 +52,29 @@ main {
     line-height: 1.5;
     margin-bottom: 2.5rem;
     color: hsl(0, 36%, 70%);
+    max-width: 450px;
+}
+
+form {
+    display: flex;
+    position: relative;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
+}
+
+input, 
+button {
+    height: 50px;
+    border: 1px solid hsl(0, 36%, 70%);
+}
+
+input {
+    padding-left: 2rem;
+    padding-right: 16.5rem;
+    margin-right: 1rem;
+    border-radius: 50px;
+    position: relative;
 }
