--- a/base-apparel-coming-soon-master/styles.css
+++ b/base-apparel-coming-soon-master/styles.css
@@ -78,3 +78,12 @@ input {
     border-radius: 50px;
     position: relative;
 }
+
+input::placeholder {
+    color: hsl(0, 36%, 70%);
+}
+
+button {
+    height: 50px;
+    background: linear-gradient (hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+}
