--- a/base-apparel-coming-soon-master/styles.css
+++ b/base-apparel-coming-soon-master/styles.css
@@ -86,4 +86,14 @@ input::placeholder {
 button {
     height: 50px;
     background: linear-gradient (hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    box-shadow: 5px 2px 5px hsl(0, 36%, 70%);
+    color: #fff;
+    border-radius: 50px;
+    padding: 10px 40px;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: transform 0.3s ease;
+    filter: 100%;
 }
